--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,8 +37,8 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym $mod+equal exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym $mod+minus exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -111,11 +111,10 @@ bindsym $mod+e layout toggle split
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
+bindsym $mod+c exec qalculate-gtk
 bindsym $mod+i exec firefox
 bindsym $mod+Ctrl+i exec firefox -no-remote -P "media"
 bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"
-bindsym $mod+plus exec "mpc volume +5"
-bindsym $mod+minus exec "mpc volume -5"
 bindsym $mod+t exec "thunar"
 bindsym $mod+Shift+t exec "thunar $HOME/Videos"
 # Define names for default workspaces for which we configure key bindings later on.
