--- a/.config/i3/config
+++ b/.config/i3/config
@@ -161,7 +161,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-# bindsym $mod+Ctrl+o exec shutdown now
+bindsym $mod+Ctrl+o exec shutdown now
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
