--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -10,14 +10,15 @@
 separator=true
 separator_block_width=35
 
-[music]
-color=#8bb6dd
-interval=1
-command=mpc | head -n1 | grep -v "volume:"
+[passwords]
+command=/home/jim/.local/bin/fish --no-config /home/jim/dot/scripts/passwords-stale.fish
+interval=10
+color=#D55E00
 
-[weather]
-interval=1800
-command=$HOME/code/i3block-utils/weather/target/release/weather KBOS
+[dotfiles]
+command=/home/jim/.local/bin/fish --no-config /home/jim/dot/scripts/dotfiles-stale.fish
+interval=10
+color=#D55E00
 
 [disk]
 command=df -h | grep '/$' | awk '{print $4 "iB"}'
