--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,8 +57,9 @@ floating_modifier $mod
 #tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec $(which alacritty)
-bindsym $mod+Shift+Return exec $(which alacritty) -e $HOME/.local/bin/fish
+bindsym $mod+Return exec $(which alacritty) -e $HOME/.local/bin/fish
+# backup zsh shell in case fish breaks
+bindsym $mod+Shift+Return exec $(which alacritty)
 # kill focused window
 bindsym $mod+q kill
 
