--- a/.config/i3/config
+++ b/.config/i3/config
@@ -115,6 +115,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+c exec qalculate-gtk
 bindsym $mod+i exec firefox
 bindsym $mod+Ctrl+i exec firefox -no-remote -P "media"
+bindsym $mod+Ctrl+m exec firefox -no-remote -P "safe"
 bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"
 bindsym $mod+t exec "thunar"
 bindsym $mod+Shift+t exec "thunar $HOME/Videos"
