--- a/.config/i3/config
+++ b/.config/i3/config
@@ -119,6 +119,7 @@ bindsym $mod+Ctrl+m exec firefox -no-remote -P "safe"
 bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"
 bindsym $mod+t exec "thunar"
 bindsym $mod+Shift+t exec "thunar $HOME/Videos"
+bindsym $mod+Ctrl+l exec i3lock --color=000000
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
