--- a/.config/i3/config
+++ b/.config/i3/config
@@ -120,6 +120,8 @@ bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"
 bindsym $mod+t exec "thunar"
 bindsym $mod+Shift+t exec "thunar $HOME/Videos"
 bindsym $mod+Ctrl+l exec i3lock --color=000000
+bindsym $mod+v exec fish -c pastevid
+bindsym $mod+m exec fish -c pastemp3
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
