--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -10,4 +10,25 @@
             <string>WenQuanYi Zen Hei</string>
         </edit>
     </match>
+    
+    <alias>
+        <family>sans-serif</family>
+        <prefer>
+            <family>Noto Sans Medium</family>
+        </prefer>
+    </alias>
+
+    <alias>
+        <family>serif</family>
+        <prefer>
+            <family>Noto Serif Medium</family>
+        </prefer>
+    </alias>
+
+    <alias>
+        <family>monospace</family>
+        <prefer>
+            <family>Victor Mono Nerd Font</family>
+        </prefer>
+    </alias>
 </fontconfig>
