--- a/.config/i3/config
+++ b/.config/i3/config
@@ -112,17 +112,6 @@ bindsym $mod+e layout toggle split
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-bindsym $mod+c exec qalculate-gtk
-bindsym $mod+i exec firefox
-bindsym $mod+Ctrl+i exec firefox -no-remote -P "media"
-bindsym $mod+Ctrl+m exec firefox -no-remote -P "safe"
-bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"
-bindsym $mod+g exec google-chrome-stable
-bindsym $mod+t exec "thunar"
-bindsym $mod+Shift+t exec "thunar $HOME/Videos"
-bindsym $mod+Ctrl+l exec i3lock --color=000000
-bindsym $mod+v exec fish -c pastevid
-bindsym $mod+m exec fish -c pastemp3
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -135,6 +124,18 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+
+bindsym $mod+c exec qalculate-gtk
+bindsym $mod+i exec firefox; workspace number $ws2
+bindsym $mod+Ctrl+i exec firefox -no-remote -P "media"; workspace number $ws2
+bindsym $mod+Ctrl+m exec firefox -no-remote -P "safe"; workspace number $ws2
+bindsym $mod+Ctrl+f exec firefox -no-remote -P "financial"; workspace number $ws2
+bindsym $mod+g exec google-chrome-stable; workspace number $ws9
+bindsym $mod+t exec "thunar"; workspace number $ws4
+bindsym $mod+Shift+t exec "thunar $HOME/Videos"; workspace number $ws4
+bindsym $mod+Ctrl+l exec i3lock --color=000000
+bindsym $mod+v exec fish -c pastevid
+bindsym $mod+m exec fish -c pastemp3
 
 # switch to workspace
 # we automatically set brightness to bright for the terminal and games since those tend to be very dark
@@ -197,11 +198,15 @@ mode "resize" {
 gaps inner 4px
 gaps outer 0px
 
+assign [class="vlc"] 2
+assign [class="firefox"] 2
 assign [class="steamwebhelper"] 3
 assign [class="steam"] 3
 assign [class="Steam"] 3
-assign [class="firefox"] 2
-assign [class="factorio"] 3
+assign [class="libreoffice"] 4
+assign [class="libreoffice-calc"] 4
+assign [class="thunar"] 4
+assign [class="Thunar"] 4
 assign [class="google-chrome"] 9
 
 for_window [class="Qalculate-gtk"] floating enable
