--- a/.config/i3/config
+++ b/.config/i3/config
@@ -64,7 +64,7 @@ bindsym $mod+Shift+Return exec $(which alacritty)
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id sh -c 'PATH="$HOME/scripts:$PATH" dmenu_run'
 # A more modern dmenu replacement is rofi:
 # bindsym $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
