cleanup and orgmode

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # this file is auto-generated and has hardcoded paths to my home dir, which doesn't work on servers
 .config/fish/fish_variables
+.claude
