--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,6 +24,9 @@ font pango:Victor Mono Nerd Font 16
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
+# variable refresh rate for g-sync compatible monitor
+exec --no-startup-id picom --vsync
+
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
