--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,22 @@ set -g renumber-windows on
 set -g escape-time 0
 set -g detach-on-destroy off
 set -g set-clipboard on
+
+if-shell 'test -f /bin/bash' \
+  'set -g default-shell /bin/bash'
+
+if-shell 'test -f /usr/bin/bash' \
+  'set -g default-shell /usr/bin/bash'
+
+if-shell 'test -f "$HOME/.local/bin/fish"' \
+  'set -g default-shell "$HOME/.local/bin/fish"'
+
+if-shell 'test -f /usr/local/bin/fish' \
+  'set -g default-shell /usr/local/bin/fish'
+
+if-shell 'test -f /opt/local/bin/fish' \
+  'set -g default-shell /opt/local/bin/fish'
+
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g display-time 4000
